force-app/main/default/objects/PARApprovalHistory__c/PARApprovalHistory__c.object-meta.xml
<CustomObject>
    <description>PAR approval history both in Salesforce and in IT-Enterprise</description>
    <label>PAR Approval History</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAR Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>