force-app/main/default/objects/PARApprovalHistory__c/fields/ApproverName__c.field-meta.xml
<CustomField>
    <fullName>ApproverName__c</fullName>
    <label>Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>