force-app/main/default/objects/PARApprovalHistory__c/fields/HistoryHash__c.field-meta.xml
<CustomField>
    <fullName>HistoryHash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>HistoryHash</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>