force-app/main/default/objects/PARApprovalHistory__c/fields/PriceApprovalRequestId__c.field-meta.xml
<CustomField>
    <fullName>PriceApprovalRequestId__c</fullName>
    <label>Price Approval Request</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>Full Approval History</relationshipLabel>
    <relationshipName>PAR_Approval_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>