force-app/main/default/objects/PARApprovalHistory__c/fields/StageAfter__c.field-meta.xml
<CustomField>
    <fullName>StageAfter__c</fullName>
    <label>Stage After</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PAR_Stages</valueSetName>
    </valueSet>
</CustomField>