force-app/main/default/objects/PARApprovalHistory__c/fields/StageBefore__c.field-meta.xml
<CustomField>
    <fullName>StageBefore__c</fullName>
    <label>Stage Before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PAR_Stages</valueSetName>
    </valueSet>
</CustomField>